--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ a {
 
 ul {
   margin-top: 0;
+  margin-bottom: 0;
   padding: 0;
 }
 li {
@@ -158,10 +159,12 @@ img {
   line-height: 1.16;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+  outline: 2px solid tomato;
 }
 
 .features {
   padding: 94px 0;
+  outline: 1px solid tomato;
 }
 
 .features-title {
@@ -182,14 +185,21 @@ img {
   margin-bottom: 0;
 }
 
+.features-item {
+  width: 270px;
+}
+
 /* work */
 
 .work {
   padding-bottom: 94px;
+  outline: 1px solid tomato;
 }
 
 .team {
   background-color: var(--third-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* team */
@@ -214,8 +224,21 @@ img {
   margin-bottom: 30px;
 }
 
-.team-social {
-  margin: 0 32px 30px;
+.social {
+  padding-bottom: 30px;
+}
+
+.clients {
+  background-color: var(--third-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.social-button {
+  width: 170px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 
 /* footer */
@@ -223,8 +246,6 @@ img {
   background-color: var(--second-background-color);
   padding: 60px 0 60px 215px;
 }
-
-
 
 .address {
   font-family: "Roboto", sans-serif;
@@ -246,7 +267,14 @@ img {
 }
 
 .footer-social {
-color: var(--background-color);
+  font-family: Roboto;
+  font-weight: bold;
+  color: var(--background-color);
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 /* !!!Portfolio!!! */
