--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ img {
   margin-right: auto;
   margin-left: auto;
   align-content: center;
+  vertical-align: baseline;
 }
 
 .horizont {
@@ -92,10 +93,6 @@ img {
 .header {
   display: flex;
   align-items: flex-end;
-}
-
-.adress-horizont {
-  align-items: flex-start;
 }
 
 .logo {
@@ -245,6 +242,13 @@ img {
   text-align: center;
 }
 
+.team-item {
+  background: var(--background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .img {
   margin-bottom: 30px;
 }
@@ -302,7 +306,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-.mail-footer{
+.mail-footer {
   margin: 9px 0;
 }
 
@@ -332,11 +336,10 @@ img {
 .heder-line {
   width: 1600px;
   height: 0px;
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
   margin-right: auto;
   margin-left: auto;
 }
-
 
 /* Main */
 
@@ -381,10 +384,9 @@ img {
   margin-right: 8px;
 }
 
-
 .portfolio-item {
   background-color: var(--background-color);
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
   box-sizing: border-box;
 }
 
